# ast-sqlite-test

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  dry_perf_eval.py  fun.txt  justfile  perf.md  perf_eval.py  pyproject.toml  rust-toolchain.toml  test-db  test-db-coverage  test-db-internal  test-db-internal.sh  test-db.sh
.github/: DOCS.md  dependabot.yml
.github/workflows/: check.yml  pytest.yml  scheduled.yml  test.yml
bug-reproducers/bug1/: README.md  original_test.sql  reduced_test.sql
bug-reproducers/bug2/: README.md  original_test.sql  reduced_test.sql
bug-reproducers/bug3/: README.md  original_test.sql  reduced_test.sql
bug-reproducers/bug4/: README.md  original_test.sql  reduced_test.sql
bug-reproducers/bug5/: README.md  original_test.sql  reduced_test.sql
bug-reproducers/bug6/: README.md  original_test.sql  reduced_test.sql
crashes/: bug_0007_CRASH_OR_ERROR.txt  bug_0159_MEMSAFETY.txt  bug_3031363263353762666263396566336535633934376330383836353437633637_LOGIC_BUG.txt  bug_3066336564356262663038393531303833393534343230626137326634323831_LOGIC_BUG.txt  bug_3733666333353631363237373165643364633632363131376133653734663762_DIVERGENCE.txt  bug_48_LOGIC_BUG.txt
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs  visitor.rs
crates/lsf-core/: Cargo.toml
crates/lsf-core/src/: entry.rs  lib.rs
crates/lsf-core/src/ast/: mod.rs
crates/lsf-cov/: Cargo.toml
crates/lsf-cov/src/: bitmap.rs  ipc.rs  lib.rs
crates/lsf-engine/: Cargo.toml
crates/lsf-engine/src/: corpus.rs  dynamic_corpus.rs  engine.rs  lib.rs  mab_scheduler.rs  minimizer.rs  probabilisitic_mab.rs  schedule.rs
crates/lsf-feedback/: Cargo.toml
crates/lsf-feedback/src/: hooks.rs  lib.rs  mab.rs  stats.rs
crates/lsf-ffi/: Cargo.toml
crates/lsf-ffi/src/: engine.rs  lib.rs  visitor.rs
crates/lsf-hooks/: Cargo.toml
crates/lsf-hooks/src/: lib.rs
crates/lsf-mutate/: Cargo.toml
crates/lsf-mutate/src/: control.rs  ident.rs  json_tree.rs  lib.rs  random_mutate.rs  recurse.rs  reduce.rs  sample.rs  schedule.rs  slice.rs  splice.rs  structure.rs  values.rs
crates/sql-test-pyo3/: Cargo.toml
crates/sql-test-pyo3/src/: lib.rs
freq/long/: keyword_average_frequency.csv  keyword_average_frequency.json  keyword_coverage.csv  keyword_coverage.json
freq/short/: keyword_average_frequency.csv  keyword_average_frequency.json  keyword_coverage.csv  keyword_coverage.json
perf/dry/: Cargo.toml
perf/dry/benches/: throughput.rs
perf/dry/src/: lib.rs  main.rs
python/analysis/: corpus_mapping.csv  scheduler.py  scheduler2.py  scheduler3.py  scheduler4.py  strategy_mapping.csv
python/lib_sf/: __init__.py  engine.pyi  lib_sf.pyi
python/lib_sql_fuzzer/: __init__.py  lib_sql_fuzzer.pyi
python/oracle/: __init__.py  executor.py
python/tester/: event_loop.py  exec.py  keyword_average_frequency.py  keyword_coverage.py  main.py  oracle.py  persistent_worker.py  plot_keyword_coverage.py  rules.py  tb_logger.py  test_sample.py
seeds/: autoindex-5-3.sql  autoindex-5-4.sql  collage-5-1.sql  distinct-2-2.sql  gencol-1-2.sql  index-2-1.sql  index-2-2.sql  select-d-1.sql
tester/: main.py  test_sample.py
