[workspace]
resolver = "3"
members = [
  "crates/*",
]
default-members = [
  "crates/*"
]

[workspace.package]
version = "0.1.0"
authors = []
edition = "2024"
license = "MIT"
repository = "https://github.com/lmeller-git/ast-sqlite-test"

[workspace.dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
sqlparser = { path = "extern/sqlparser-rs", features = ["serde", "visitor"] }
serde = "1.0.228"
lsf-core = { path = "crates/lsf-core" }
lsf-engine = { path = "crates/lsf-engine" }

[patch.crates-io]
sqlparser = { path = "extern/sqlparser-rs" }

[profile.release]
