[workspace]
resolver = "3"
members = [
  "crates/*",
]
default-members = [
  "crates/*"
]

[workspace.package]
version = "0.1.0"
authors = []
edition = "2024"
license = "MIT"
repository = "https://github.com/lmeller-git/ast-sqlite-test"

[workspace.dependencies]
rand = "0.10.0"
serde = "1.0.228"
portable-atomic = { version = "1.13.1", features = ["float", "std"] }
sqlparser = { path = "extern/sqlparser-rs", features = ["serde", "visitor"] }
lsf-core = { path = "crates/lsf-core" }
lsf-engine = { path = "crates/lsf-engine" }
lsf-mutate = { path = "crates/lsf-mutate" }
lsf-cov = { path = "crates/lsf-cov" }
lsf-feedback = { path = "crates/lsf-feedback" }

[patch.crates-io]
sqlparser = { path = "extern/sqlparser-rs" }

[profile.release]
lto = "fat"
codegen-units = 1
