[project]
name = "lib_sf"
version = "0.1.0"
license = "MIT"
requires-python = ">=3.7"

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
# point maturin at the ffi crate, not the workspace root
manifest-path = "crates/lsf-ffi/Cargo.toml"
module-name = "lib_sf"
features = ["pyo3/extension-module"]
python-source = "python"

[tool.ruff]
cache-dir = ".ruff_cache"
