[project]
name = "lib_sf"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE", "crates/lsf-ffi/LICENSE-sqloxide"]
requires-python = ">=3.7"
readme = "README.md"
description = "Project 1 for course Automated Software Testing ETH"
dependencies = []

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "maturin"
]

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
# point maturin at the ffi crate, not the workspace root
manifest-path = "crates/lsf-ffi/Cargo.toml"
module-name = "lib_sf"
features = ["pyo3/extension-module"]
python-source = "python"

[tool.ruff]
cache-dir = ".ruff_cache"
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pyright]
include = ["python"]
extraPaths = ["python"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
