[package]
name = "sql-fuzzer-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "lib_sql_fuzzer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"]}
pythonize = { version = "0.28.0", features = ["serde_json"] }
serde = {workspace = true }
sqlparser = { workspace = true }
