[package]
name = "lsf-cov"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitvec = "1.0.1"
shared_memory = "0.12.4"
nblf-queue = { git = "https://github.com/lmeller-git/nblf-queue.git", features = ["std"], default-features = false }
