[package]
name = "lsf-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sqlparser = { workspace = true }
serde = { workspace = true }
lsf-core = { workspace = true }
lsf-mutate = { workspace = true }
lsf-cov = { workspace = true }
lsf-feedback = { workspace = true }
rand = { workspace = true }
portable-atomic = { workspace = true }
indexmap = "2.13.0"
siphasher = "1.0.2"
smallvec = { workspace = true }
priority-queue = "2.7.0"
ordered-float = "5.3.0"
