[package]
name = "lib-sf"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "lib_sf"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.2" }
pythonize = { version = "0.28.0", features = ["serde_json"] }
serde = {workspace = true }
sqlparser = { workspace = true }
lsf-core = { workspace = true }
lsf-engine = { workspace = true }
